feat: 为待选元素添加hover效果

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,8 @@
   display: flex;
   align-items: stretch;
   justify-content: stretch;
+  overflow: hidden;
+  overscroll-behavior: contain;
 }
 
 .canvasViewportWrapper {
