--- a/src/components/toolbar/Toolbar.module.css
+++ b/src/components/toolbar/Toolbar.module.css
@@ -43,11 +43,11 @@
 }
 
 .toolbarButtonActive {
-  background-color: #10b981;
+  background-color: #5ea500;
   color: #ffffff;
 }
 
 .toolbarButtonActive:hover {
-  background-color: #059669;
+  background-color: #497d00;
   color: #ffffff;
 }
